--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <a href="img/my_pic.jpg" target="_farid"> <img class="hero_img" src="img/my_pic.jpg" alt="farid_pic"></a>
         <div class="Intro">
             <h1>Farid Masood</h1>
-            <em>Founder And CEO Of <a href="defalutError.html">The Freelance Guy.</a></em>
+            <em>Founder And CEO Of <a href="Bacon Fansite/CSS - Bacon Fansite/index.html">The Freelance Guy.</a></em>
             <p>I'm available for freelancing. I ❤ Coding And New Challenges.</p>
             <h4 class="greeding">Web, IOS & Android Developer. </h4>
            <div class="buttons">
